# rts-scraper

./: .gitignore  README.md  back_fill.py  back_fill_postgres.py  back_fill_sqlite.py  pyproject.toml
back_fill/: back_fill_postgres.py  back_fill_sqlite.py  back_fill_sqlite_threaded.py
back_fill/bus_location/: back_fill_postgres.py  back_fill_sqlite.py
back_fill/patterns/: back_fill_pattern.py
scraper/: __main__.py  data_types.py  job_get_detours.py  job_get_patterns.py  job_get_routes.py  job_get_vehicles.py  log.py  util.py
scraper/jobs/: job_get_detours.py  job_get_patterns.py  job_get_vehicles.py
