[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Noah Bresler <noahbresler2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.1"
rts-api = {path = "../rts-api-python", develop=true}
apscheduler = "^3.9.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
