[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Noah Bresler <noahbresler2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.21.1"
apscheduler = "^3.9.1.post1"
rts-api = {git = "https://github.com/RTSPlus/rts-api-python"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
