[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Noah Bresler <noahbresler2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.1"
apscheduler = "^3.9.1.post1"
rts-api = {git = "https://github.com/RTSPlus/rts-api-python"}
boto3 = "^1.26.59"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
